# PyMHD

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/Bz128beta10Cs10nu1e-4Pm1PLM/: README.md  decay.athinput  nd.athinput  quick.py  turb.athinput
examples/Bz128beta10Cs10nu1e-4Pm1PLM/outputs/: Turb.mhd.hst
examples/MRI128Re1e4Pm10PPM/: README.md  mri3d_unstratified.athinput  nd.athinput  quick.py
examples/MRI128Re1e4Pm10PPM/outputs/: HGB.user.hst
pymhd/: __init__.py  numdiss.py  spectra.py  turbulence.py
pymhd/derivatives/: TENO.py  WENO.py  __init__.py  compact.py  derivative.py
pymhd/plot/: __init__.py  nd.py  slc.py  spc.py
pymhd/preprocess/: Athena.py  __init__.py
pymhd/preprocess/helper/: NOTICE  bin_convert.py  make_athdf.py
tests/: numdiss.test.py  preprocess.test.py  slice.test.py  spectra.test.py
